# bash-ast

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  HOMEBREW.md  Makefile  README.md  build.rs  safe_parse.c  wrapper.h
.cargo/: config.toml
.github/workflows/: ci.yml  musl-test.yml  release.yml
Formula/: bash-ast.rb
benches/: parse_benchmark.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/fuzz_parse/: heredoc  if_stmt  pipeline  redirects  subshell
fuzz/fuzz_targets/: fuzz_parse.rs
src/: ast.rs  bash_init.rs  convert.rs  ffi.rs  lib.rs  main.rs  server.rs  to_bash.rs
src/convert/: helpers.rs  mod.rs
tests/: compound_redirects.rs  integration.proptest-regressions  integration.rs  schema_validation.rs  snapshots.rs  to_bash_ast_prop.rs  to_bash_exact.rs  to_bash_regressions.rs  to_bash_roundtrip_matrix.rs
tests/common/: mod.rs
tests/snapshots/: 01_simple_command.expected.json  02_pipeline.expected.json  02_pipeline.sh  03_and_or_lists.expected.json  03_and_or_lists.sh  04_background.expected.json  04_background.sh  05_for_loop.expected.json  05_for_loop.sh  06_for_loop_no_in.expected.json  06_for_loop_no_in.sh  07_c_style_for.expected.json  07_c_style_for.sh  08_while_until.expected.json  08_while_until.sh  09_if_elif_else.expected.json  09_if_elif_else.sh  10_case_statement.expected.json  10_case_statement.sh  11_case_fallthrough.expected.json  11_case_fallthrough.sh  12_functions.expected.json  12_functions.sh  13_redirections.expected.json  13_redirections.sh  14_heredoc.expected.json  14_heredoc.sh  15_herestring.expected.json  15_herestring.sh  16_subshell_group.expected.json  16_subshell_group.sh  17_arithmetic.expected.json  17_arithmetic.sh  18_conditional.expected.json  18_conditional.sh  19_expansions.expected.json  19_expansions.sh  20_process_sub.expected.json  20_process_sub.sh  21_coproc.expected.json  (+68 more)
