[package]
name = "bash-ast"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0"
description = "Parse bash scripts to JSON AST using bash's actual parser"
authors = ["Carlos Villela <cv@lixo.org>"]
repository = "https://github.com/cv/bash-ast"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
schemars = "0.8"

[build-dependencies]
bindgen = "0.70"
cc = "1.0"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "bash-ast"
path = "src/main.rs"

[lib]
name = "bash_ast"
path = "src/lib.rs"

[[bench]]
name = "parse_benchmark"
harness = false

[lints.clippy]
# Enable strict lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic lints we allow (too noisy or not applicable)
missing_errors_doc = "allow"        # We use thiserror, docs are clear
missing_panics_doc = "allow"        # Build script panics are intentional
module_name_repetitions = "allow"   # BashAst in bash_ast is fine

# Debian/Ubuntu package metadata
[package.metadata.deb]
maintainer = "Carlos Villela <cv@lixo.org>"
copyright = "2024-2026, Carlos Villela"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bash-ast", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bash-ast/", "644"],
    ["LICENSE", "usr/share/doc/bash-ast/", "644"],
]

# RPM (RedHat/Fedora/CentOS) package metadata
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bash-ast", dest = "/usr/bin/bash-ast", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/bash-ast/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/bash-ast/LICENSE", mode = "644" },
]
